<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.limox.jesus.manageproductcontentprovider.Login_Activity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilUser"
        app:counterEnabled="true"
        app:errorTextAppearance="@color/colorError"
        >

        <EditText
            android:id="@+id/edtUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/messageUser"
            android:text="dsgf"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilUser"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:errorTextAppearance="@color/colorError"
        app:hintTextAppearance="@style/hint"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/edtPassword"
            android:hint="@string/messagePassword"
            android:text="asdfasdfas3434"
            />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:text="@string/cbRemember_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilPassword"
        android:id="@+id/cbRemember"
        android:layout_marginTop="@dimen/widget_margin_top"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbRemember"
        android:layout_marginTop="@dimen/widget_margin_top"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selbtnlogin"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_below="@+id/linearLayout">
    <TextView
        android:text="@string/txvforgot_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:id="@+id/txvForgot" />
    <TextView
        android:text="@string/txvcreateu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:id="@+id/txvCreateu" />

</LinearLayout>
</RelativeLayout>
