<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/su_rlContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.limox.jesus.manageproductcontentprovider.SignUp_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/crtUser_til_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <EditText
                    android:id="@+id/crtUser_edtName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/crtUser_edtName"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/crtUser_til_passwrd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/crtUser_til_name">

                <EditText
                    android:id="@+id/crtUser_edtPasswrd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/crtUser_edtPassword"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/crtUser_til_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/crtUser_til_passwrd">

                <EditText
                    android:id="@+id/crtUser_edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignEnd="@+id/editText2"
                    android:layout_below="@+id/editText2"
                    android:hint="@string/crtUser_edtEmail"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/crtUser_spnProvincia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/crtUser_til_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/crtUser_til_email"
                android:layout_toEndOf="@+id/crtUser_spnProvincia"
                android:text="@string/crtUser_txvProvincia" />

            <Spinner
                android:id="@+id/crtUser_spnLocalidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/crtUser_spnProvincia"
                android:text="@string/crtUser_txvLocalidad" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/crtUser_spnProvincia"
                android:layout_toEndOf="@+id/crtUser_spnLocalidad"
                android:text="@string/crtUser_txvLocalidad" />

            <CheckBox
                android:layout_below="@id/crtUser_spnLocalidad"
                android:text="@string/crtUser_cbPubli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/crtUser_cbPubli" />

            <CheckBox
                android:layout_below="@+id/crtUser_cbPubli"
                android:text="@string/crtUser_cbRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/crtUser_cbRemember"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tipo usuario:"
                android:id="@+id/crtUser_txvTipoUsr"
                android:layout_below="@+id/crtUser_cbRemember"/>
            <RadioGroup
                android:id="@+id/crtUser_rgpTipo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/crtUser_txvTipoUsr"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/crtUser_rdbtnParticular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/crtUser_rbtParticular" />

                <RadioButton
                    android:id="@+id/crtUser_rdbtnBusiness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/crtUser_rbtBusiness" />
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/crtUser_til_business"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/crtUser_txvTipoUsr">

                <EditText
                    android:id="@+id/crtUser_edtBusiness"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/crtUser_edtPassword"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>


    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/crtUser_btnOkay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            />

    </LinearLayout>
</RelativeLayout>
