<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.limox.jesus.manageproductcontentprovider.Fragments.ManageProduct_Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/mp_iBtnPicture"
            android:layout_width="@dimen/imageButton_size"
            android:layout_height="@dimen/imageButton_size"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/iBtnPicture_Description"
            app:srcCompat="@drawable/img1" />

        <TextView
            android:id="@+id/mp_txvPictureTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mp_iBtnPicture"
            android:text="@string/txvPicture_text" />

        <TextView
            android:id="@+id/mp_txvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/MarginImage"
            android:layout_marginStart="@dimen/MarginImage"
            android:layout_toEndOf="@+id/mp_iBtnPicture"
            android:layout_toRightOf="@+id/mp_iBtnPicture"
            android:text="@string/txvName_text" />

        <EditText
            android:id="@+id/mp_edtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mp_txvName"
            android:layout_marginLeft="@dimen/MarginImage"
            android:layout_marginStart="@dimen/MarginImage"
            android:layout_toEndOf="@+id/mp_iBtnPicture"
            android:layout_toRightOf="@+id/mp_iBtnPicture"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/mp_txvBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mp_edtName"
            android:layout_marginLeft="@dimen/MarginImage"
            android:layout_marginStart="@dimen/MarginImage"
            android:layout_toEndOf="@+id/mp_iBtnPicture"
            android:layout_toRightOf="@+id/mp_iBtnPicture"
            android:text="@string/txvBrand_text" />

        <EditText
            android:id="@+id/mp_edtBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mp_txvBrand"
            android:layout_marginLeft="@dimen/MarginImage"
            android:layout_marginStart="@dimen/MarginImage"
            android:layout_toEndOf="@+id/mp_iBtnPicture"
            android:layout_toRightOf="@+id/mp_iBtnPicture"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <Spinner
            android:id="@+id/mp_spCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mp_edtBrand" />

        <TextView
            android:id="@+id/mp_txvDosage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mp_spCategory"
            android:layout_marginTop="@dimen/MarginImage"
            android:text="@string/txvDosage_text" />

        <EditText
            android:id="@+id/mp_edtDosage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/mp_edtBrand"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/mp_edtBrand"
            android:layout_below="@+id/mp_txvDosage"
            android:layout_marginLeft="@dimen/MarginImage"
            android:layout_marginStart="@dimen/MarginImage"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/mp_txvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mp_edtDosage"
            android:text="@string/txvPrice_text" />

        <EditText
            android:id="@+id/mp_edtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/mp_edtDosage"
            android:layout_alignLeft="@+id/mp_edtDosage"
            android:layout_alignRight="@+id/mp_edtDosage"
            android:layout_alignStart="@+id/mp_edtDosage"
            android:layout_below="@+id/mp_txvPrice"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="" />

        <TextView
            android:id="@+id/mp_txvStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mp_edtPrice"
            android:text="@string/txvStock_text" />

        <EditText
            android:id="@+id/mp_edtStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/mp_edtDosage"
            android:layout_alignLeft="@+id/mp_edtDosage"
            android:layout_alignRight="@+id/mp_edtDosage"
            android:layout_alignStart="@+id/mp_edtDosage"
            android:layout_below="@+id/mp_txvStock"
            android:inputType="number" />

        <TextView
            android:id="@+id/mp_txvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mp_edtStock"
            android:text="@string/txvDescription_text" />

        <EditText
            android:id="@+id/mp_edtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mp_txvDescription"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="4"
            android:maxLines="10"
            android:minLines="3"
            android:scrollbars="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mp_edtDescription"
            android:gravity="center">

            <include layout="@layout/btnok_btncancel" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
